--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,13 @@
     height: auto;
     width: 98%;
 }
+
+.lista-receitas {
+    list-style: none;
+}
+
+.lista-receitas a {
+    text-decoration: none;
+    color: #000;
+    font-size: 18px;
+}
