--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    width: 80%;
+    margin: 10px auto;
+    padding: 8px;
+    border: 2px solid #000;
+    border-radius: 10px;
+}
+
 .container-imagem {
     text-align: center;
 }
@@ -10,6 +24,7 @@
 .lista-receitas {
     list-style: none;
     font-family: 'Courier New', Courier, monospace;
+    margin: 10px;
 }
 
 .lista-receitas a {
@@ -18,12 +33,23 @@
     font-size: 18px;
 }
 
-.titulo,.nome-receita {
+.lista-ingredientes,
+.lista-preparo {
+    margin: 5px 25px;
+}
+
+.titulo,
+.nome-receita {
     text-align: center;
 }
 
-.home{
+.home {
     display: block;
     text-align: right;
     font-size: 18px;
+    padding: 4px;
+}
+
+.texto {
+    margin: 5px 2px;
 }
