--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,13 @@
     box-sizing: border-box;
 }
 
+/* 
 body {
     width: 80%;
     margin: 10px auto;
     border: 2px solid #000;
     border-radius: 10px;
-}
+} */
 
 a {
     text-decoration: none;
@@ -26,10 +27,10 @@ ul {
 .header {
     background-color: #803434;
     border: 1px solid brown;
-    border-radius: 5px;
+    border-radius: 1px;
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
+    justify-content: space-around;
+    padding: 15px;
     align-items: center;
 }
 
